--- a/frontend/src/styles/views/nofileselectedview.scss
+++ b/frontend/src/styles/views/nofileselectedview.scss
@@ -45,7 +45,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            overflow: scroll;
+            overflow: auto;
 
             gap: 5px;
             backdrop-filter: $global-darkened-box-brightness;
