--- a/frontend/src/styles/views/scripteditorview.scss
+++ b/frontend/src/styles/views/scripteditorview.scss
@@ -8,12 +8,15 @@
     width: 100%;
     height: 100%;
 
+    padding: 50px;
+    gap: 20px;
+
     .add-action-container {
         display: flex;
         flex-direction: column;
+
         gap: 20px;
         width: 100%;
-        padding: 50px;
 
         .actions {
             position: relative;
